# GateKpr

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
cli/: gatekeeper.ts
client/: gatekeeper.ts
client/idl/: gatekeeper.json
docs/: DEVNET_WEB2_APPLICATION_TEST_LOG.md  LOCAL_ER_RUNBOOK.md
programs/gatekeeper/: Cargo.toml
programs/gatekeeper/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/gatekeeper/src/instructions/: attach_policy_to_role.rs  commit_and_undelegate_quota_runtime.rs  commit_quota_runtime.rs  consume_request.rs  create_api_key.rs  create_organization.rs  create_quota_policy.rs  create_role.rs  delegate_quota_runtime.rs  initialize_gateway.rs  initialize_quota_runtime.rs  mod.rs  revoke_api_key.rs  settle_runtime_checkpoint.rs
scripts/: common.ts  devnet-er-smoke.ts  devnet-web2-demo.ts  local-transport-doctor.ts  reconcile-runtime.ts  router-capability.ts  router-diagnostics.ts  runtime-health.ts
tests/: gatekeeper.ts  web2-demo.ts
